ingresses-sonar.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: sonar
  namespace: jenkins
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonar
                port:
                  number: 80
